# bopytest2-code

./: .gitignore  README.md  pyproject.toml
cards_proj/: pyproject.toml
docs/: section4_6.md
